--- a/test-cbioportalR.Rmd
+++ b/test-cbioportalR.Rmd
@@ -6,7 +6,10 @@ output: github_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(
+  echo = TRUE,
+  warning = FALSE
+  )
 ```
 
 ## cbioportalR test
@@ -16,7 +19,7 @@ The graph will be a barplot with bars for each type of cancer and their respecti
 
 ###### Let's install the packages
 
-```{r install and load, results=hide}
+```{r install and load, message='hide'}
 install.packages("cbioportalR")
 install.packages("dplyr")
 
