--- a/test-cbioportalR.Rmd
+++ b/test-cbioportalR.Rmd
@@ -21,18 +21,26 @@ The graph will be a barplot with bars for each type of cancer and their respecti
 
 ```{r install and load, message='hide'}
 install.packages("cbioportalR")
-install.packages("dplyr")
+install.packages("tidyverse")
 
 library("cbioportalR")
-library("dplyr")
+library("tidyverse")
 ```
 
-## Including Plots
+###### Checking the database
 
-You can also embed plots, for example:
+Set the `cbioportal` database
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r database_setup}
+set_cbioportal_db(db = "public")
+
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+Great success! Now let's have a look at what we're dealing with...
+
+```{r available_studies}
+available_studies() %>% 
+  head(n = 10)
+
+```
+
